# python_in_R

./: .gitignore  Fuel_cons.txt  ID_event.py  README.md  d_config.py  dist_allmods.py  new_file.py  pyproject.toml  requirements.txt  run.py  synthetic_CST.py  vehicle_list.csv
WH-Report/: .gitignore  Untitled.ipynb  create_shell_script.R  cronrun.sh  run.py
WH-Report/Modules/: algorithms.py  config.py  desc.txt  struct.txt  utils.py
modules/: Dist_data.csv  algorithms.py  config.py  data.py  mqtt_subscriber.py
sample_data/: 6-dec.RDS
