[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pronoy", email = "lukex9442@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.25.2",
    "haversine>=2.8.0",
    "multiprocess>=0.70.15",
    "p-tqdm>=1.4.0",
    "tqdm>=4.66.1",
    "pytz>=2023.3",
    "pyreadr>=0.4.9",
    "matplotlib>=3.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

